examples/good/04_1_print.soy
# we can print unitialized variables as None 
a = int;
print(a);

print("4_1_PASSED");