examples/bad/assign_wrong_type.soy
a = int;
a = "hej"; # ERROR: a was int